--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <title> Snake Game </title>
     </head>
     <body>
+       
+        <h1 class="titulo"> Snake Game! </h1>
+        <canvas id="snake" class="canvasPosition" width="512" height="512"></canvas>
         
-        <h1> Snake Game! </h1>
-        <canvas id="snake" width="512" height="512"></canvas>
-
     </body>
 </html>
